--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -1,5 +1,7 @@
+
+
 .navbar {
-    background-color:#ff221a;
+    background-color:#e57373;
     height: 60px;
     display: flex;
     justify-content: start;
@@ -13,7 +15,7 @@
   }
   
   .nav-menu {
-    background-color: #b3110bdf;
+    background-color: #e57373;
     width: 250px;
     height: 100vh;
     display: flex;
@@ -59,7 +61,7 @@
   }
   
   .navbar-toggle {
-    background-color: #b3110bdf;
+    background-color: #e57373;
 
     width: 100%;
     height: 60px;
