--- a/src/App.css
+++ b/src/App.css
@@ -35,6 +35,16 @@
 .bg-curso{
   background-color: rgb(235, 56, 25);
 }
+.titulo1{
+  margin-top: 20px;
+  text-align: center;
+  font-size: 30px;
+  font-weight: bold;
+  
+  color: white;
+}
+
+
 .titulo2{
   margin-top: 20px;
   text-align: center;
