--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -76,10 +76,9 @@
   .titulo{
     
     color: #f5f5f5;
-    margin-right: 500px;
     text-decoration: solid;
     text-decoration-line: inherit;
     font-style: oblique;
     font-size: 30px;
-    
+    justify-content: start;
   }
