--- a/src/App.css
+++ b/src/App.css
@@ -44,9 +44,15 @@
   margin-left: 250px;
   margin-right: 100px;
 }
-.buscador{
+.suggestion{
 
-  
+  cursor:pointer;
+  border-right: 1px solid black;
+  border-left: 1px solid black;
+  border-bottom: 1px solid black;
+}
+.suggestion:hover{
+  background-color: grey;
 }
 
 .loginTitle{
