--- a/src/App.css
+++ b/src/App.css
@@ -90,11 +90,27 @@
 .background{
   background-color: #e57373;
   min-width: 100%;
-  min-height: 95vh;
+  min-height: 100vh;
   display: flex;
   justify-content: center;
   padding: 50px;
 }
+
+.loginBackImage {
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    opacity: 0.15;
+    z-index: 1;
+
+}
+
+.card{
+    z-index: 2;
+}	
+
 
 .centeredDiv{
   display: flex;
